RESOLVED FIXED285087
WebTransport should send network errors to JS for failure points
https://bugs.webkit.org/show_bug.cgi?id=285087
Summary WebTransport should send network errors to JS for failure points
ankshit
Reported 2024-12-22 16:59:16 PST
WebTransport operations like sending & receiving datagrams, sending & receiving on streams and handling outgoing & incoming streams can all encounter network failures and should forward these errors to JS.
Attachments
ankshit
Comment 1 2024-12-22 17:19:58 PST
ankshit
Comment 2 2024-12-22 17:20:38 PST
EWS
Comment 3 2025-01-06 17:18:27 PST
Committed 288498@main (d09b3b34e3e9): <https://commits.webkit.org/288498@main> Reviewed commits have been landed. Closing PR #38327 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.