Source/WebCore/Modules/webtransport/WorkerWebTransportSession.cpp
@@ -54,14 +54,14 @@ void WorkerWebTransportSession::attachSession(Ref<WebTransportSession>&& session
     m_session = WTFMove(session);
 }
 
-void WorkerWebTransportSession::receiveDatagram(std::span<const uint8_t> span)
+void WorkerWebTransportSession::receiveDatagram(std::span<const uint8_t> span, bool withFin, std::optional<Exception>&& exception)
 {
     ASSERT(RunLoop::isMain());
-    ScriptExecutionContext::postTaskTo(m_contextID, [vector = Vector<uint8_t> { span }, weakClient = m_client] (auto&) mutable {
+    ScriptExecutionContext::postTaskTo(m_contextID, [vector = Vector<uint8_t> { span }, withFin, exception = WTFMove(exception), weakClient = m_client] (auto&) mutable {
         RefPtr client = weakClient.get();
         if (!client)
             return;
-        client->receiveDatagram(vector.span());
+        client->receiveDatagram(vector.span(), withFin, WTFMove(exception));
     });
 }
 
@@ -98,23 +98,23 @@ void WorkerWebTransportSession::receiveBidirectionalStream(WebTransportBidirecti
     });
 }
 
-void WorkerWebTransportSession::streamReceiveBytes(WebTransportStreamIdentifier identifier, std::span<const uint8_t> data, bool withFin)
+void WorkerWebTransportSession::streamReceiveBytes(WebTransportStreamIdentifier identifier, std::span<const uint8_t> data, bool withFin, std::optional<Exception>&& exception)
 {
     ASSERT(RunLoop::isMain());
-    ScriptExecutionContext::postTaskTo(m_contextID, [identifier, data = Vector<uint8_t> { data }, withFin, weakClient = m_client] (auto&) mutable {
+    ScriptExecutionContext::postTaskTo(m_contextID, [identifier, data = Vector<uint8_t> { data }, withFin, exception = WTFMove(exception),  weakClient = m_client] (auto&) mutable {
         RefPtr client = weakClient.get();
         if (!client)
             return;
-        client->streamReceiveBytes(identifier, data.span(), withFin);
+        client->streamReceiveBytes(identifier, data.span(), withFin, WTFMove(exception));
     });
 }
 
-Ref<GenericPromise> WorkerWebTransportSession::sendDatagram(std::span<const uint8_t> datagram)
+Ref<WebTransportSendPromise> WorkerWebTransportSession::sendDatagram(std::span<const uint8_t> datagram)
 {
     ASSERT(!RunLoop::isMain());
     if (RefPtr session = m_session)
         return session->sendDatagram(datagram);
-    return GenericPromise::createAndReject();
+    return WebTransportSendPromise::createAndReject();
 }
 
 Ref<WritableStreamPromise> WorkerWebTransportSession::createOutgoingUnidirectionalStream()
@@ -133,11 +133,32 @@ Ref<BidirectionalStreamPromise> WorkerWebTransportSession::createBidirectionalSt
     return BidirectionalStreamPromise::createAndReject();
 }
 
-void WorkerWebTransportSession::terminate(uint32_t code, CString&& reason)
+void WorkerWebTransportSession::terminate(WebTransportSessionErrorCode code, CString&& reason)
 {
     ASSERT(!RunLoop::isMain());
     if (RefPtr session = m_session)
         session->terminate(code, WTFMove(reason));
+}
+
+void WorkerWebTransportSession::cancelReceiveStream(WebTransportStreamIdentifier identifier, std::optional<WebTransportStreamErrorCode> errorCode)
+{
+    ASSERT(!RunLoop::isMain());
+    if (RefPtr session = m_session)
+        session->cancelReceiveStream(identifier, errorCode);
+}
+
+void WorkerWebTransportSession::cancelSendStream(WebTransportStreamIdentifier identifier, std::optional<WebTransportStreamErrorCode> errorCode)
+{
+    ASSERT(!RunLoop::isMain());
+    if (RefPtr session = m_session)
+        session->cancelSendStream(identifier, errorCode);
+}
+
+void WorkerWebTransportSession::destroyStream(WebTransportStreamIdentifier identifier, std::optional<WebTransportStreamErrorCode> errorCode)
+{
+    ASSERT(!RunLoop::isMain());
+    if (RefPtr session = m_session)
+        session->destroyStream(identifier, errorCode);
 }
 
 }
