Source/WebKit/WebProcess/Network/WebTransportSession.cpp
@@ -32,6 +32,7 @@
 #include "NetworkTransportSessionMessages.h"
 #include "WebProcess.h"
 #include "WebTransportSendStreamSink.h"
+#include <WebCore/Exception.h>
 #include <WebCore/WebTransportBidirectionalStreamConstructionParameters.h>
 #include <WebCore/WebTransportSessionClient.h>
 #include <wtf/Ref.h>
@@ -64,7 +65,7 @@ WebTransportSession::~WebTransportSession()
 {
     ASSERT(RunLoop::isMain());
     WebProcess::singleton().removeWebTransportSession(m_identifier);
-    WebProcess::singleton().ensureNetworkProcessConnection().connection().send(Messages::NetworkConnectionToWebProcess::DestroyWebTransportSession(m_identifier), 0);
+    m_connection->send(Messages::NetworkConnectionToWebProcess::DestroyWebTransportSession(m_identifier), 0);
 }
 
 IPC::Connection* WebTransportSession::messageSenderConnection() const
@@ -77,11 +78,11 @@ uint64_t WebTransportSession::messageSenderDestinationID() const
     return m_identifier.toUInt64();
 }
 
-void WebTransportSession::receiveDatagram(std::span<const uint8_t> datagram)
+void WebTransportSession::receiveDatagram(std::span<const uint8_t> datagram, bool withFin, std::optional<WebCore::Exception>&& exception)
 {
     ASSERT(RunLoop::isMain());
     if (auto strongClient = m_client.get())
-        strongClient->receiveDatagram(datagram);
+        strongClient->receiveDatagram(datagram, withFin, WTFMove(exception));
     else
         ASSERT_NOT_REACHED();
 }
@@ -107,19 +108,22 @@ void WebTransportSession::receiveBidirectionalStream(WebCore::WebTransportStream
         ASSERT_NOT_REACHED();
 }
 
-void WebTransportSession::streamReceiveBytes(WebCore::WebTransportStreamIdentifier identifier, std::span<const uint8_t> bytes, bool withFin)
+void WebTransportSession::streamReceiveBytes(WebCore::WebTransportStreamIdentifier identifier, std::span<const uint8_t> bytes, bool withFin, std::optional<WebCore::Exception>&& exception)
 {
     ASSERT(RunLoop::isMain());
     if (RefPtr strongClient = m_client.get())
-        strongClient->streamReceiveBytes(identifier, bytes, withFin);
+        strongClient->streamReceiveBytes(identifier, bytes, withFin, WTFMove(exception));
     else
         ASSERT_NOT_REACHED();
 }
 
-Ref<GenericPromise> WebTransportSession::sendDatagram(std::span<const uint8_t> datagram)
+Ref<WebCore::WebTransportSendPromise> WebTransportSession::sendDatagram(std::span<const uint8_t> datagram)
 {
-    return sendWithPromisedReply(Messages::NetworkTransportSession::SendDatagram(datagram))->whenSettled(RunLoop::main(), [] {
-        return GenericPromise::createAndResolve();
+    return sendWithPromisedReply(Messages::NetworkTransportSession::SendDatagram(datagram))->whenSettled(RunLoop::main(), [] (auto&& exception) {
+        ASSERT(RunLoop::isMain());
+        if (!exception)
+            return WebCore::WebTransportSendPromise::createAndReject();
+        return WebCore::WebTransportSendPromise::createAndResolve(*exception);
     });
 }
 
@@ -148,14 +152,16 @@ Ref<WebCore::BidirectionalStreamPromise> WebTransportSession::createBidirectiona
     });
 }
 
-Ref<GenericPromise> WebTransportSession::streamSendBytes(WebCore::WebTransportStreamIdentifier identifier, std::span<const uint8_t> bytes, bool withFin)
+Ref<WebCore::WebTransportSendPromise> WebTransportSession::streamSendBytes(WebCore::WebTransportStreamIdentifier identifier, std::span<const uint8_t> bytes, bool withFin)
 {
-    return sendWithPromisedReply(Messages::NetworkTransportSession::StreamSendBytes(identifier, bytes, withFin))->whenSettled(RunLoop::main(), [] {
-        return GenericPromise::createAndResolve();
+    return sendWithPromisedReply(Messages::NetworkTransportSession::StreamSendBytes(identifier, bytes, withFin))->whenSettled(RunLoop::main(), [] (auto&& exception) {
+        if (!exception)
+            return WebCore::WebTransportSendPromise::createAndReject();
+        return WebCore::WebTransportSendPromise::createAndResolve(*exception);
     });
 }
 
-void WebTransportSession::terminate(uint32_t code, CString&& reason)
+void WebTransportSession::terminate(WebCore::WebTransportSessionErrorCode code, CString&& reason)
 {
     send(Messages::NetworkTransportSession::Terminate(code, WTFMove(reason)));
 }
@@ -165,5 +171,20 @@ void WebTransportSession::networkProcessCrashed()
     ASSERT(RunLoop::isMain());
     if (RefPtr strongClient = m_client.get())
         strongClient->networkProcessCrashed();
+}
+
+void WebTransportSession::cancelReceiveStream(WebCore::WebTransportStreamIdentifier identifier, std::optional<WebCore::WebTransportStreamErrorCode> errorCode)
+{
+    send(Messages::NetworkTransportSession::CancelReceiveStream(identifier, errorCode));
+}
+
+void WebTransportSession::cancelSendStream(WebCore::WebTransportStreamIdentifier identifier, std::optional<WebCore::WebTransportStreamErrorCode> errorCode)
+{
+    send(Messages::NetworkTransportSession::CancelSendStream(identifier, errorCode));
+}
+
+void WebTransportSession::destroyStream(WebCore::WebTransportStreamIdentifier identifier, std::optional<WebCore::WebTransportStreamErrorCode> errorCode)
+{
+    send(Messages::NetworkTransportSession::DestroyStream(identifier, errorCode));
 }
 }
